--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,68 @@
-/.idea/
+# output files
+/target
+/test-output
+
+# Compiled class file
+*.class
+
+# IDE settings files
+
+##VSCODE
+.vscode/
+
+## IntelliJ
+out/
+.idea/
+.idea_modules/
 *.iml
-/target/
-/lib
-/build/
-/.gradle/
-/bin
+*.ipr
+*.iws
+
+## Eclipse
+.settings/
+bin/
+tmp/
+.metadata
 .classpath
 .project
-.settings
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+.factorypath
+
+## NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Mac OS - DSSTORE files
+.DS_Store
+
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
